--- a/app/src/main/res/layout/activity_suit_game.xml
+++ b/app/src/main/res/layout/activity_suit_game.xml
@@ -7,4 +7,135 @@
     android:layout_height="match_parent"
     tools:context=".SuitGameActivity">
 
+    <ImageView
+        android:id="@+id/player_rock"
+        android:src="@drawable/hand_rock"
+        android:scaleType="fitXY"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="16dp"
+        android:rotation="180"
+        app:layout_constraintEnd_toStartOf="@id/player_scissors"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/player_scissors"
+        android:src="@drawable/hand_scissors"
+        android:scaleType="fitXY"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="16dp"
+        android:rotation="180"
+        app:layout_constraintStart_toEndOf="@id/player_rock"
+        app:layout_constraintEnd_toStartOf="@id/player_papper"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/player_papper"
+        android:src="@drawable/hand_papper"
+        android:scaleType="fitXY"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="16dp"
+        android:rotation="180"
+        app:layout_constraintStart_toEndOf="@id/player_scissors"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/tv_player_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rotation="180"
+        android:layout_margin="24dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/player_scissors"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:id="@+id/player_selected"
+        android:src="@drawable/hand_scissors"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:rotation="180"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_player_info"
+        tools:ignore="ContentDescription" />
+
+    <Button
+        android:id="@+id/btn_play"
+        android:padding="16dp"
+        android:layout_margin="24dp"
+        android:text="@string/play_game"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player_selected"
+        app:layout_constraintBottom_toTopOf="@id/tv_away_info"/>
+
+    <ImageView
+        android:id="@+id/away_selected"
+        android:src="@drawable/hand_scissors"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_away_info"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/tv_away_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:padding="16dp"
+        app:layout_constraintBottom_toTopOf="@id/away_scissors"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:id="@+id/away_rock"
+        android:src="@drawable/hand_rock"
+        android:scaleType="fitXY"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toStartOf="@id/away_scissors"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/away_scissors"
+        android:src="@drawable/hand_scissors"
+        android:scaleType="fitXY"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toEndOf="@id/away_rock"
+        app:layout_constraintEnd_toStartOf="@id/away_papper"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/away_papper"
+        android:src="@drawable/hand_papper"
+        android:scaleType="fitXY"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toEndOf="@id/away_scissors"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="ContentDescription" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
