update on button

--- a/app/src/main/res/layout/activity_suit_game.xml
+++ b/app/src/main/res/layout/activity_suit_game.xml
@@ -78,8 +78,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/player_selected"
-        app:layout_constraintBottom_toTopOf="@id/tv_away_info"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
         android:id="@+id/away_selected"
